// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly 1`] = `
<StyledTouchableOpacity
  isMultipleTapAllowed={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "paddingVertical": 10,
      },
      undefined,
      undefined,
    ]
  }
>
  <StyledText
    isUnderline={false}
    letterSpacing={0}
    textStyle="h11MedWhiteT3"
  />
</StyledTouchableOpacity>
`;

exports[`Button should render isInactive type Button 1`] = `
<StyledTouchableOpacity
  disabled={true}
  isMultipleTapAllowed={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "paddingVertical": 10,
      },
      undefined,
      undefined,
    ]
  }
>
  <StyledText
    isUnderline={false}
    letterSpacing={0}
    textStyle="h11MedWhiteT3O"
  />
</StyledTouchableOpacity>
`;

exports[`Button should render noFeedback type Link 1`] = `
<StyledTouchableOpacity
  activeOpacity={1}
  style={
    Array [
      undefined,
      undefined,
    ]
  }
>
  <StyledText
    addedStyle={
      Array [
        undefined,
        undefined,
      ]
    }
    isUnderline={false}
    letterSpacing={0}
    textStyle="h11MedRedP"
  />
</StyledTouchableOpacity>
`;

exports[`Button should render the link type Button 1`] = `
<StyledTouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
  style={
    Array [
      undefined,
      undefined,
    ]
  }
>
  <StyledText
    addedStyle={
      Array [
        undefined,
        undefined,
      ]
    }
    isUnderline={false}
    letterSpacing={0}
    textStyle="h11MedRedP"
  />
</StyledTouchableOpacity>
`;
